2009-Jun-01	weaver	Tag V00-09-00.  Consistent with pdsdata V00-04-00.  Added management/PartitionControl
			as a base for run control sequencer.
2009-Apr-16	weaver	Added Pulnix TM6740 camera.  Added occurrences to collection messages.
			Added function to drop evr multicasts and generate opal1k out-of-order (for testing).
			Fix in GenericPoolW to use counting semaphore for pool resource counting.
			Fix in Event Builder to keep good events in order.  Individual (errant) events can slip 
			out-of-order due to dropped contributions and missing PulseId. 
			Added support for vmon archiving. 
2009-Apr-3      cpo     Change some default acqiris params so that
                        we don't get as many "WARNING: Parameter has been
                        adapted" messages.  We still have one, which
                        comes when we set the trigger coupling to DC50ohms
                        (for some reason it complains that the previous
                        setting didn't have the 50 ohms in it, I believe).

2009-Mar-31     weaver  Tag V00-08-00.  Consistent with pdsdata V00-03-00.
			Added missing versions to all data type constructions.
			Added typedefs in config/*Type.hh to track current versions of config objects.
			Added vmon.
2009-Mar-24     cpo     Tag V00-07-03.  Better (final?) acqiris data support.
2009-Mar-20	weaver	Tag V00-07-02.	Added collection "Query" messages for source
			level management.  Implemented partition id/multicast group
			assignments in management/[Source,Control]Level,PartitionMember and EvrManager.
2009-Mar-10	weaver	Tag V00-07-01.  Minor fixes to camera code.
2009-Mar-04	weaver	Tag V00-07-00.  Many changes to camera interfaces.  Now reads
			configuration from database and writes record on configure transition.
			Added a simple insert() to InDatagram class for appending data to
			an existing datagram.
2009-Feb-19	weaver  Added mon package for online monitoring support classes.